# tiny-media-center

./: .gitignore  .luarc.json  Cargo.toml  GEMINI.md  README.md  REWRITE.md  THIRD_PARTY_LICENSES.md  conf.lua  conf_parser.lua  config.lua  index.html  main.js  main.lua  mise.toml  package-lock.json  package.json  preload.js  setup.sh  start  style.lua  tiny-media-center.spec
.copr/: Makefile
.github/workflows/: release.yml
attachments/mpv/: input.conf  mpv.conf  preflight.lua  print-info.lua  print-position.lua  runtime.lua  visualiser.lua
components/: background.lua  loading_screen.lua  menu.lua  menu_item.lua
conf/mpv/: input.conf  mpv.conf
openbox/: autostart  menu.xml  rc.xml
scripts/: build-release.sh
spec/: main.md
src/: App.jsx  app.rs  background.rs  config.rs  index.css  input.rs  loading.rs  main.rs  media.rs  menu.rs  player.rs
src/components/: Footer.jsx  Header.jsx  MainMenu.jsx  MediaBrowser.jsx  Menu.jsx  MovieList.jsx  Player.jsx  ScriptPlayer.jsx  ScriptRunner.jsx
src/hooks/: useKeyboard.js
utils/: conf.lua
