[package]
name = "tiny-media-center"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
sdl3 = "0.14"
femtovg = "0.11"
libmpv2 = { version = "4", features = ["render"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
fastrand = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
# SDL3 is statically linked from source by default, since most distros don't
# package it yet; build with --no-default-features to link a system SDL3.
default = ["vendored-sdl"]
vendored-sdl = ["sdl3/build-from-source-static"]

[profile.release]
lto = true
strip = true
